--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
-					<source>${jdk.level}</source>
-					<target>${jdk.level}</target>
+					<source>1.8</source>
+					<target>2.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
