--- a/pom.xml
+++ b/pom.xml
@@ -1,112 +1,138 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.test</groupId>
-	<artifactId>First_repo</artifactId>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13</version>
-			<scope>test</scope>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.globex.web</groupId>
+    <artifactId>globex-web</artifactId>
+    <packaging>war</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>globex-web</name>
+    <url>http://maven.apache.org</url>
+
+    <properties>
+        <!-- https://maven.apache.org/general.html#encoding-warning -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <spring.version>5.1.0.RELEASE</spring.version>
+    </properties>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <!-- logging , spring 5 no more bridge, thanks spring-jcl -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
+        <!-- junit 5, unit test -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>				
+            <groupId>org.seleniumhq.selenium</groupId>								
+            <artifactId>selenium-java</artifactId>								
+            <version>2.45.0</version>								
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
-		<!-- <dependency> <groupId>com.googlecode.json-simple</groupId> <artifactId>json-simple</artifactId> 
-			<version>1.1.1</version> </dependency> -->
+        <!-- unit test -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20180130</version>
-		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.apache.maven.surefire</groupId> -->
-		<!-- <artifactId>surefire-junit47</artifactId> -->
-		<!-- <version>3.0.0-M5</version> -->
-		<!-- </dependency> -->
-		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>7.1.0</version>
-			<scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
-		<dependency>
-		    <groupId>org.sonarsource.scanner.maven</groupId>
-		    <artifactId>sonar-maven-plugin</artifactId>
-		    <version>3.8.0.2131</version>
-		</dependency>
+        <!-- for web servlet -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
 
-	</dependencies>
-	<properties>
-		<maven.resources.version>3.0.2</maven.resources.version>
-		<maven.compiler.version>3.8.0</maven.compiler.version>
-		<maven.surefire.version>2.22.0</maven.surefire.version>
-		<maven.failsafe.version>2.22.0</maven.failsafe.version>
-		<maven.verifier.version>1.1</maven.verifier.version>
-		<maven.clean.version>3.0.0</maven.clean.version>
-		<maven.build.helper.version>3.0.0</maven.build.helper.version>
-		<jetty.version>9.4.11.v20180605</jetty.version>
-		<jersey.version>2.27</jersey.version>
-		<java.version>11</java.version>
+        <!-- Some containers like Tomcat don't have jstl library -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
+    <build>
+        <finalName>globex-web</finalName>
+        <plugins>
+            <!-- http://www.eclipse.org/jetty/documentation/current/jetty-maven-plugin.html -->
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.12.v20180830</version>
+            </plugin>
+
+            <!-- Default is too old, update to latest to run the latest Spring 5 + jUnit 5 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+              	<configuration>
+                	<!-- Sets the VM argument line used when unit tests are run. -->
+                	<argLine>${surefireArgLine}</argLine>
+              	</configuration>
+            </plugin>
+
+            <!-- Default 2.2 is too old, update to latest -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.2</version>
+            </plugin>
+          
+ 
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.6</version>
+              	<executions>
+                  <execution>
+                    <id>pre-unit-test</id>
+                    <goals>
+                      <goal>prepare-agent</goal>
+                    </goals>
+                    <configuration>
+                      <propertyName>surefireArgLine</propertyName>
+                    </configuration>
+                  </execution>
+              	</executions>
+            </plugin>
 		
-		<sonar.projectKey>balu-sn-devops_First_repo</sonar.projectKey>
-		<sonar.organization>balu-sn-devops</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		
-	  <sonar.projectKey>devops-2022_sonar-scanning-examples</sonar.projectKey>
-	  <sonar.organization>devops-2022</sonar.organization>
-	  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-  
-		<sonar.projectKey>devops-2022_sonar-scanner-maven</sonar.projectKey>
-		<sonar.organization>devops-2022</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		
-	</properties>
+	    <!-- https://stackoverflow.com/questions/44379867/failed-to-get-bootstrap-index-from-server
+	    <plugin>
+      		<groupId>org.sonarsource.scanner.maven</groupId>
+      		<artifactId>sonar-maven-plugin</artifactId>
+      		<version>3.2</version>
+  	    </plugin>
+            -->
+        </plugins>
+    </build>
 
-	<version>0.0.1-SNAPSHOT</version>
-
-	<build>
-		<plugins>
-		
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<maven.compiler.source>1.8</maven.compiler.source>
-					<maven.compiler.target>1.8</maven.compiler.target>
-				</configuration>
-			</plugin>
-			<plugin>
-			     <groupId>org.sonarsource.scanner.maven</groupId>
-			     <artifactId>sonar-maven-plugin</artifactId>
-			
-			     <configuration>
-			       <goalPrefix>sonar</goalPrefix>
-			     </configuration>
-			
-			 </plugin>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-					<!-- <skipTests>true</skipTests> -->
-
-					<suiteXmlFiles>
-						<!-- Suite file injection parameter from command line -->
-						<suiteXmlFile>./testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
-				</configuration>
-
-
-			</plugin>
-			
-
-		</plugins>
-	</build>
 </project>
